--- a/qr-code-component/style.css
+++ b/qr-code-component/style.css
@@ -19,7 +19,7 @@ body{
     align-items: center;
     height: 100vh;
     font-family: 'Outfit', sans-serif;
-    background-color: var(--light_gray);
+    background-color: ightblue;
     font-family:'Outfit', sans-serif;    
 }
 
